RESOLVED FIXED202845
REGRESSION: fast/events/touch/ios/long-press-on-image.html is failing
https://bugs.webkit.org/show_bug.cgi?id=202845
Summary REGRESSION: fast/events/touch/ios/long-press-on-image.html is failing
Dean Jackson
Reported 2019-10-11 02:44:16 PDT
REGRESSION: fast/events/touch/ios/long-press-on-image.html is failing
Attachments
Patch (8.46 KB, patch)
2019-10-11 02:50 PDT, Dean Jackson
graouts: review+
Dean Jackson
Comment 1 2019-10-11 02:45:00 PDT
Dean Jackson
Comment 2 2019-10-11 02:50:30 PDT
Dean Jackson
Comment 3 2019-10-11 10:22:58 PDT
Note You need to log in before you can comment on or make changes to this bug.